<resources>
    <string name="app_name">dam-project</string>
    <string name="create_profile_student_tv_welcome">Create your profile</string>
    <string name="create_profile_student_last_name_hint">Last Name</string>
    <string name="create_profile_student_email_hint">Email</string>
    <string name="create_profile_student_tv_sex">Sex</string>


    <string name="create_profile_student_tv_photo">Add a photo</string>
    <string name="create_profile_student_iv_avatar">Your photo</string>
    <string name="create_profile_student_first_name_hint">First Name</string>
    <string name="create_profile_student_password_hint">Password</string>
    <string name="create_profile_student_rb_sex_f">F</string>
    <string name="create_profile_student_rb_sex_m">M</string>
    <string name="create_profile_student_tv_birthday">Birthdate</string>
    <string name="profile_student_tv_hello">Hello, @tempName</string>
    <string name="profile_student_tv_progress">Your progress</string>
    <string name="profile_student_iv_cd_avatar">Your Avatar</string>
    <string name="home_student_tv_welcome">Welcome</string>
    <string name="home_student_btn_profile">My Profile</string>
    <string name="home_student_btn_start_contest">Start Contest</string>
    <string name="edit_profile_student_tv">Edit your profile</string>
    <string name="edit_profile_first_name_hint">First Name</string>
    <string name="edit_profile_student_last_name_hint">Last Name</string>
    <string name="edit_profile_student_email_hint">Email</string>
    <string name="edit_profile_student_btn_save">Save</string>
    <string name="edit_profile_student_save_message">Profile saved</string>
    <string name="main_btn_home_student">Student Home</string>
    <string name="create_profile_student_btn_save">Save</string>
    <string name="main_btn_create_profile_student">Create profile</string>
    <string name="choose_category_title">CATEGORIES</string>
    <string name="choose_category_description">Choose categories:</string>
    <string name="choose_answer_title">Choose your answer!</string>
    <string name="choose_answer_temporary">Temporary question</string>
    <string name="rate_contest">Rate your experience!</string>
    <string name="login_student_title">Log-in</string>
    <string name="login_student_signUp">Do not have an account? Sing-up now!</string>
    <string name="login_student_user_error">Username is not correct!</string>
    <string name="login_student_passwd_error">Password is not correct!</string>
    <string name="create_profile_student_first_name_error">First Name field cannot be empty</string>
    <string name="create_profile_student_last_name_error">Last Name field cannot be empty</string>
    <string name="create_profile_student_email_error">Email field cannot be empty</string>
    <string name="create_profile_student_password_error">Password field cannot be empty</string>
    <string name="create_profile_student_password_error1">Password field must contain at least 8 characters</string>
    <string name="main_tv">You\'re a...</string>
    <string name="main_btn_student">Student</string>
    <string name="main_btn_teacher">Teacher</string>
    <string name="create_profile_student_edit_profile">Edit Profile</string>
    <string name="login_student_username_hint">Username</string>
    <string name="login_student_password_hint">Password</string>
    <string name="login_student_btn_signIn">Sign-In</string>
    <string name="login_student_btn_signUp">Sign-Up</string>
    <string name="login_teacher_title">Log in</string>
    <string name="home_teacher_btn_start_contest">Contests</string>
    <string name="create_contest_name">Name:</string>
    <string name="create_contest_description">Description:</string>
    <string name="create_contest_questions">Questions in this contest:</string>
    <string name="create_contest_add_question">Add question</string>
    <string name="create_contest_save_contest">Save Contest</string>
    <string name="create_contest_tv_create">Create contest</string>
    <string name="add_question_answer1_valid_error">Answer 1 is not valid</string>
    <string name="add_question_answer2_valid_error">Answer 2 is not valid</string>
    <string name="answer_3">Answer 3</string>
    <string name="create_contest_tv_difficulty">Difficulty:</string>
    <string name="activity_contest_error">Result is not ok</string>
    <string name="create_contest_name_valid_error">Contest Name is not valid</string>
    <string name="create_contest_description_valid_error">Contest Description is not valid</string>
    <string name="create_contest_activity_error">Result is not ok</string>
    <string name="add_question_write_question_valid_error">Question is not valid</string>
    <string name="question_adapter_no_question_msg">No Question</string>
    <string name="contest_adapter_no_name_msg">No Contest Name</string>
    <string name="contest_adapter_no_description_msg">No Contest Description</string>
    <string name="choose_question_btn_rate_contest">Rate Contest</string>
    <string name="activity_contests_tv_contests">List of contests:</string>
    <string name="choose_answer_error">You must select one answer!</string>
    <string name="activity_contests_btn_categ2">Categ2</string>
    <string name="activity_contests_btn_categ1">Fun contests</string>
    <string name="activity_contests_btn_categ3">Categ3</string>
    <string name="contests_tv">Contests</string>
    <string name="contests_btn_categ1">Fun contests</string>
    <string name="contests_btn_categ2">Categ2</string>
    <string name="contests_btn_categ3">Categ3</string>
    <string name="contests_btn_create_contest">Create Contest</string>
    <string name="tv_lv_contests_row_contest_code">Contest Code:</string>
    <string name="message_alert">Are you sure you want to delete this contest?</string>
    <string name="message_alert2">Are you sure you want to delete question with title "%1$s"?</string>
    <string name="message_alert3">Are you sure you want to delete answer "%1$s"?</string>
    <string name="add_answer_tie_answer">Answer</string>
    <string name="add_answer_btn_add_answer">Add answer to question</string>
    <string name="add_question_btn_add_ans">Add answer to this question</string>
    <string name="add_question_tv_answers">Answers in this question:</string>
    <string name="n_btn_save">Save question</string>
    <string name="add_question_tv_time_limit">Time Limit:</string>
    <string name="add_question_tie_question">Write question</string>
    <string name="contests_btn_chart">Chart</string>
    <string name="contests_tie_students">Number of targeted students</string>
    <string name="tv_lv_users_row_user">User</string>
    <string name="tv_lv_users_row_password">password</string>
    <string name="tv_lv_users_row_first_name">First Name</string>
    <string name="tv_lv_users_row_last_name">Last Name</string>
    <string name="tv_lv_users_row_email">Email</string>
    <string name="tv_lv_users_row_birthdate">Birthdate</string>
    <string name="tv_lv_users_row_sex">Sex</string>
    <string name="created_users_tv">Created Users</string>
    <string name="create_profile_student_user_hint">User</string>
    <string name="create_profile_teacher_user_hint">User</string>


    <string-array name="choose_category_spn_values">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
    </string-array>

    <string-array name="choose_question_values">
        <item>Question 1</item>
        <item>Question 2</item>
        <item>Question 3</item>
        <item>Question 4</item>
        <item>Question 5</item>
    </string-array>

    <string-array name="add_question_time_values">
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>40 seconds</item>
        <item>50 seconds</item>
        <item>60 seconds</item>
        <item>90 seconds</item>
    </string-array>

</resources>
